[package]
name = "eternity-core-rust"
version = "0.1.0"
authors = ["eternity labs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }


[lib]
path = "./src/lib.rs"

