[package]
name = "eternity-core-rust"
version = "0.1.0"
authors = ["eternity labs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hex = "0.4"
hmac = "0.11.0"
sha2 = "0.9"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
error-chain = { version = "0.12.4", default-features = false }
serde_json = "1.0"
tungstenite = { version = "0.15.0", features = ["native-tls"] }
url = "2.2.2"
tokio = { version = "1", features = ["full"] }


[features]
vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls-vendored"]

[lib]
path = "./src/lib.rs"


