[package]
name = "eternity-core-rust"
version = "0.1.0"
authors = ["eternity labs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]

secp256k1 = {version="^0.20.3", features = ["rand"]}

web3 = "0.17.0"
hex = "0.4"
hmac = "0.11.0"
sha2 = "0.9"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
error-chain = { version = "0.12.4", default-features = false }
serde_json = "1.0"
tungstenite = { version = "0.15.0", features = ["native-tls"] }
url = "2.2.2"
tokio = { version = "1", features = ["full"] }

### This is a transitive dependency, only here so we can turn on its wasm_bindgen feature
rand = {version = "0.8.4", features = ["std"]}
getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2.68", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
bitcoin_hashes = { version = "0.10", default-features = false, optional = true }

time = { version = "0.3.5", features = ["macros"] }


mysql = "*"

chrono = { version = "0.4" }

[dev-dependencies]
# For examples

hex-literal = "0.3.4"

rand = "0.6"
rand_core = "0.4"
serde_test = "1.0"
bitcoin_hashes = "0.10"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
rand = { version = "0.6", features = ["wasm-bindgen"] }

[features]





default = ["rand/std"]

[lib]
path = "./src/lib.rs"


